<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FHDW-KarteiKartenApp</string>
    <string name="start_selection">Kartei auswählen</string>
    <string name="start_config">Einstellungen</string>
    <string name="statistics">Statistik</string>
    <string name="amount_category">Anzahl Kategorien</string>
    <string name="category1">Allgemeinwissen</string>
    <string name="category2">Fitness</string>
    <string name="category3">Musik</string>
    <string name="category4">Architektur</string>
    <string name="category5">Filme</string>
    <string name="category6">Kunst</string>
    <string name="category7">Geschichte</string>
    <string name="category8">Fotografie</string>
    <string name="addProfile">Profil anlegen:</string>
    <string name="changeUser">User wechseln</string>
    <string name="deleteProfile">Profil löschen:</string>
    <string name="info">Über diese App</string>
    <string name="login">Login</string>
    <string name="new_user">Neuen Benutzer anlegen</string>
    <string name="button_login">Einloggen</string>
    <string name="profile_management">Profilverwaltung</string>
    <string name="profile_choose_login">Profil auswählen:</string>
    <string name="category_choose">Bitte Kategorie auswählen:</string>
    <string name="settings_class_change">Lernklassen verwalten</string>
    <string name="category_chosen">Kategorie wählen</string>
    <string name="hallo">Willkommen,</string>
    <string name="user">Test</string>
    <string name="category_choose_user_menu">Kategorie wählen</string>
    <string name="class_management">Wiedervorlageklassen bearbeiten</string>
    <string name="statistic_user_menu"><u>Statistik</u></string>
    <string name="choose_category_category">Kategorie wählen:</string>
    <string name="initial_category_amount">7</string>
    <string name="addprofile_button">Profil anlegen</string>
    <string name="delprofile_button">Profil löschen</string>
    <string name="class_number_headline">Klasse</string>
    <string name="class_management_headline">Klassenmanagement</string>
    <string name="class_time_headline">Zeitspanne</string>
    <string name="class_time_minute">Minute(n)</string>
    <string name="class_time_hour">Stunde(n)</string>
    <string name="class_time_day">Tag(e)</string>
    <string name="class_time_not_asc_error_message">Bitte geben sie die Zeiten der Klassen aufsteigend an!</string>
    <string name="class_time_to_high_error_message">Bitte geben sie kleinere Zeiten ein! Momentan sind die Zahlen zu groß zum speichern.</string>
    <string name="class_error_message">Bitte geben Sie die Zeiten der Klassen aufsteigend an!</string>
    <string name="missing_input_error_message">Bitte füllen sie alle Zeitspannen!</string>
    <string name="user_empty_error_message">Bitte geben sie einen Namen ein!</string>
    <string name="user_equal_error_message">Der Name existiert bereits. Bitte überlegen Sie sich einen neuen Namen!</string>
    <string name="exists_no_user_error_message">Es existieren bereits keine User!</string>
    <string name="login_failed">Der Login war nicht erfolgreich. Legen Sie ggf. ein Profil im Profil-Management an.</string>
    <string name="end_of_learn_session">Der Lernmodus ist somit abgeschlossen!!</string>
    <string name="logo">logo</string>
    <string name="action_settings">Settings</string>
    <string name="no_due_challenges">Aktuell sind keine Challenges dieser Kartei fällig. Bitte refresh drücken oder ggf. warten</string>
    <string name="quit_learn_session">Lernmodus beenden</string>
    <string name="sure_to_quit_learn_session">Sind Sie sicher, dass Sie den Lernmodus beenden möchten?</string>
    <string name="impressum">Entwickler: \nFrank Helfmeyer \nCarsten Schlender \nRicardo La Valle \nSamira Schorre</string>
    <string name="refresh">Die fälligen Challenges wurden neu geladen</string>
</resources>
