<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo"
        android:text="@string/app_name"
        android:textColor="@color/red" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/choose_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:text="@string/login"
        android:textColor="@color/red" />

    <Spinner
        android:id="@+id/choose_profile"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColor="@color/red" />

    <Button
        android:id="@+id/profile_management_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/profile_management"
        android:textColor="@color/red" />

</RelativeLayout>
